# AVaRICE

./: CMakeLists.txt  ChangeLog
cmake/: FindBFD.cmake  FindUSB-1.0.cmake  FindUSB.cmake  Shorthand.cmake
cmake/cmake-modules/: Copyright.txt  FindIconv.cmake  FindIntl.cmake
doc/: CMakeLists.txt
scripts/: CMakeLists.txt  ice-gdb
scripts/win32/: ice-gdb.bat  ice-insight.bat  kill-avarice.bat  start-avarice.bat
src/: CMakeLists.txt  autoconf.in.cmake  crc16.c  crc16.h  devdescr.cc  gnu_getopt.c  gnu_getopt.h  gnu_getopt1.c  ioreg.cc  ioreg.h  jtag.h  jtag1.h  jtag2.h  jtag2_defs.h  jtag2bp.cc  jtag2io.cc  jtag2misc.cc  jtag2prog.cc  jtag2run.cc  jtag2rw.cc  jtag2usb.cc  jtag3.h  jtag3bp.cc  jtag3io.cc  jtag3misc.cc  jtag3prog.cc  jtag3run.cc  jtag3rw.cc  jtagbp.cc  jtaggeneric.cc  jtagio.cc  jtagmisc.cc  jtagprog.cc  jtagrun.cc  jtagrw.cc  main.cc  remote.cc  remote.h  utils.cc
